Better Rendering logic